--- a/views/contacts.html.twig
+++ b/views/contacts.html.twig
@@ -6,7 +6,7 @@
 
 <body>
     <div class="container">
-<h1>Contacts</h1>
+<h1>Address Book</h1>
       <!-- will post contacts if contacts is not empty -->
       {% if contacts is not empty %}
 
