debugs new contact form

--- a/views/contacts.html.twig
+++ b/views/contacts.html.twig
@@ -25,7 +25,7 @@
       <!-- ends the whole if statement -->
       {% endif %}
       <!--  creating the user submission form -->
-      <form action=/'create_contact' method='post'>
+      <form action='/create_contact' method='post'>
         <div class='form-group'>
           <label for='name'>Contact Name:</label>
           <input class='form-control' id='name' name='name' type='text'><br>
