--- a/views/create_contact.html.twig
+++ b/views/create_contact.html.twig
@@ -5,12 +5,15 @@
 </head>
 
 <body>
+  <div class='container'>
   <h1>Contact created!</h1>
+  
   <p>{{ newcontact.getContactName }}</p>
   <p>{{ newcontact.getContactNumber }}</p>
   <p>{{ newcontact.getContactAddress }}</p><br>
 
   <p><a href='/'>Return to your Adress Book</a></p>
+  </div>
 </body>
 
-</html>   
+</html>
