--- a/views/delete_contacts.html.twig
+++ b/views/delete_contacts.html.twig
@@ -5,9 +5,9 @@
 </head>
 
 <body>
-
+  <div class='container'>
   <h1>Address Book cleared!</h1>
   <p><a href='/'>Home</a></p>
-
+  </div>
 </body>
 </html>
