--- a/views/contacts.html.twig
+++ b/views/contacts.html.twig
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class='container'>
 <h1>Address Book</h1>
       <!-- will post contacts if contacts is not empty -->
       {% if contacts is not empty %}
