--- a/views/delete_contacts.html.twig
+++ b/views/delete_contacts.html.twig
@@ -1,13 +1,13 @@
 <html>
 <head>
     <title>Address Book cleared!</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrap.cdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 </head>
 
 <body>
-  <div class='container'>
-  <h1>Address Book cleared!</h1>
-  <p><a href='/'>Home</a></p>
-  </div>
+    <div class='container'>
+      <h1>Address Book cleared!</h1>
+      <p><a href='/'>Home</a></p>
+    </div>
 </body>
 </html>
